comments kind of collapse but dont un collapse correctly, and navigation away and back breaks everything

--- a/app/views/comment/comment.css
+++ b/app/views/comment/comment.css
@@ -4,15 +4,6 @@
   margin-top: 7;
 }
 
-.collapse {
-  background-color: grey;
-  height: 25;
-}
-
-.comment-collapse {
-  visibility: 'collapse';
-}
-
 .comment-inner {
   padding: 7 15;
 }
